--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
@@ -423,6 +423,7 @@
                     #numeroIdentificacion
                     formControlName="numeroIdentificacion"
                     required
+                    (keypress)="validateKeypress($event)"
                   />
                 </mat-form-field>
                 <span
