--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-amortizacion-anticipo/form-amortizacion-anticipo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-amortizacion-anticipo/form-amortizacion-anticipo.component.html
@@ -7,7 +7,7 @@
         </mat-card-header>
         <mat-card-content style="text-align: left;">
             <p><strong>Saldo a amortizar:</strong> {{ valorPorAmortizar.value | currency:'':'symbol-narrow':'.0-0' }} </p>
-            <p><strong>Porcentaje de amortización:</strong> {{ addressForm.get( 'porcentajeAmortizacion' ).value }}% </p>
+            <!--<p><strong>Porcentaje de amortización:</strong> {{ addressForm.get( 'porcentajeAmortizacion' ).value }}% </p>-->
             <p><strong>Valor de amortización:</strong> {{ addressForm.get( 'valorAmortizacion' ).value | currency:'':'symbol-narrow':'.0-0' }} </p>
         </mat-card-content>
     </mat-card>
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <!--<div class="row">
                     <div class="col-md-8">
                         <div class="row">
                             <div class="pr-1">
@@ -76,7 +76,7 @@
                             </span>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="row">
                     <div class="col-md-8">
                         <div class="row">
@@ -95,6 +95,7 @@
                                             maxlength="20"
                                             required
                                             formControlName="valorAmortizacion"
+                                            (ngModelChange)="validateValueAmortizacion($event)"
                                             (keypress)="validateNumberKeypress($event)"
                                             onKeyPress="if(this.value.length>=this.maxLength) return false; if (event.key === '-') this.value = ''"
                                             [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
