--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/amortizacion-pago/amortizacion-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/amortizacion-pago/amortizacion-pago.component.html
@@ -5,7 +5,7 @@
         </mat-card-title>
     </mat-card-header>
     <mat-card-content style="text-align: left;">
-        <p><strong>Porcentaje de amortización:</strong> {{ detalleForm.get( 'porcentajeAmortizacion' ).value }}% </p>
+        <!--<p><strong>Porcentaje de amortización:</strong> {{ detalleForm.get( 'porcentajeAmortizacion' ).value }}% </p>-->
         <p><strong>Valor de amortización:</strong> ${{ detalleForm.get( 'valorAmortizacion' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
     </mat-card-content>
 </mat-card>
