--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/gestionar-balan-financ-trasl-rec/gestionar-balan-financ-trasl-rec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/gestionar-balan-financ-trasl-rec/gestionar-balan-financ-trasl-rec.component.html
@@ -115,7 +115,7 @@
                   >
                       Liberar saldo
                 </button>
-                <!--<button
+                <button
                       mat-button
                       mat-raised-button
                       color="accent"
@@ -124,7 +124,7 @@
                       (click)="liberarSaldoDelete(element)"
                   >
                       Liberar saldo - Rollback
-                </button>-->
+                </button>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
