--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -208,12 +208,12 @@
 
             <section class="text-center table-responsive tabla-gris" style="margin-top: 2em;" *ngIf="historialObservaciones.length > 0">
                 <table mat-table [dataSource]="tablaHistorial" matSort>
-              
+
                     <ng-container matColumnDef="fechaRevision">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Fecha de revisión </th>
                       <td mat-cell *matCellDef="let element" align="center" class="color-text"> <b>{{ element.fechaCreacion | date: 'dd/MM/yyyy' }}</b> </td>
                     </ng-container>
-              
+
                     <ng-container matColumnDef="responsable">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color w-20"> Responsable de la observación </th>
                         <td mat-cell *matCellDef="let element" align="center" class="color-text">
@@ -224,21 +224,21 @@
                             </div>
                         </td>
                     </ng-container>
-              
+
                     <ng-container matColumnDef="historial">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Historial de observaciones </th>
                       <td mat-cell *matCellDef="let element" align="center" class="color-text">
                           <section [innerHTML]="element.observacion"></section>
                       </td>
                     </ng-container>
-                
+
                   <tr mat-header-row *matHeaderRowDef="displayedColumnsHistorial"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumnsHistorial;"></tr>
                 </table>
             </section>
         </ng-template>
         -->
-        
+
     </mat-expansion-panel>
 
     <mat-expansion-panel class="expansion-style sub-expansion">
@@ -247,7 +247,7 @@
                 Porcentajes de participación
             </mat-panel-title>
         </mat-expansion-panel-header>
-        
+
         <app-tabla-porcntj-partic-gog *ngIf="solicitudPago.tablaPorcentajeParticipacion !== undefined && solicitudPago.tablaPorcentajeParticipacion.length > 0" [tablaPorcentajeParticipacion]="solicitudPago.tablaPorcentajeParticipacion"></app-tabla-porcntj-partic-gog>
     </mat-expansion-panel>
     <mat-expansion-panel class="expansion-style sub-expansion">
@@ -258,5 +258,15 @@
         </mat-expansion-panel-header>
 
         <app-tabla-info-fuenterec-gog *ngIf="solicitudPago.tablaInformacionFuenteRecursos !== undefined && solicitudPago.tablaInformacionFuenteRecursos.length > 0" [tablaInformacionFuenteRecursos]="solicitudPago.tablaInformacionFuenteRecursos"></app-tabla-info-fuenterec-gog>
+    </mat-expansion-panel>
+    <mat-expansion-panel class="expansion-style sub-expansion" *ngIf="solicitudPagoFase?.solicitudPagoFaseAmortizacion.length > 0">
+        <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+                Amortización del anticipo
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div *ngFor="let solicitudAmortizacion of solicitudPagoFase?.solicitudPagoFaseAmortizacion">
+          <app-amortizacion-pago [solicitudPagoFaseAmortizacion]="solicitudAmortizacion" [contratacionProyectoId]="solicitudPagoFase?.contratacionProyectoId"></app-amortizacion-pago>
+        </div>
     </mat-expansion-panel>
 </mat-accordion>
