--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/amortizacion-pago/amortizacion-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/amortizacion-pago/amortizacion-pago.component.html
@@ -12,6 +12,7 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content style="text-align: left;">
+            <p><strong>Saldo a amortizar:</strong> ${{ saldoAmortizar | currency:' ':'symbol-narrow':'.0-0' }} </p>
             <p><strong>Valor de amortización:</strong> ${{ valorAmortizacion | currency:' ':'symbol-narrow':'.0-0' }} </p>
         </mat-card-content>
       </mat-card>
