--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -238,7 +238,7 @@
             </mat-panel-title>
         </mat-expansion-panel-header>
         <div *ngFor="let solicitudAmortizacion of solicitudPagoFase?.solicitudPagoFaseAmortizacion">
-          <app-amortizacion-pago [solicitudPagoFaseAmortizacion]="solicitudAmortizacion" [contratacionProyectoId]="solicitudPagoFase?.contratacionProyectoId"></app-amortizacion-pago>
+          <app-amortizacion-pago [solicitudPagoFaseAmortizacion]="solicitudAmortizacion" [contratacionProyectoId]="solicitudPagoFase?.contratacionProyectoId" [vAmortizacionXproyecto]="solicitudPago?.vAmortizacionXproyecto[0]"></app-amortizacion-pago>
         </div>
     </mat-expansion-panel>
 </mat-accordion>
