Procesos contractuales y registrar liquidación (datos quemados)

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/recursos-compro-pagados-rlc/recursos-compro-pagados-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/recursos-compro-pagados-rlc/recursos-compro-pagados-rlc.component.html
@@ -1,89 +1,89 @@
-<section class="container text-center">
-    <div class="text-right">
-        <a routerLink="/registrarLiquidacionContrato/detalleBalanceFinanciero/1" mat-button color="primary" class="btn-regresar">
-            <img src="assets/img/icon/regresar.svg" alt="Regresar">
-        </a>
-    </div>
-    <h1 class="title-menu--h1">Recursos comprometidos y pagados LL457326</h1>
-    <p class="info-sub-title">
-        <span>Número de contrato de obra: <b>N801801</b></span>
-        <span>Número de contrato de interventoría: <b>A513513</b></span>
-    </p>
-    <mat-card class="shipping-card var-main-gris">
-        <mat-card-content align="left">
-            <p><strong>Tipo de intervención: </strong><em>Remodelación</em></p>
-            <p><strong>Institución Educativa: </strong><em>I.E Nuestra Señora Del Carmen</em></p>
-            <p><strong>Sede: </strong><em>Única Sede</em></p>
-            <p><strong>Departamento: </strong><em>Boyacá</em></p>
-            <p><strong>Municipio: </strong><em>Susacón</em></p>
-        </mat-card-content>
-    </mat-card>
-    <mat-accordion>
-        <mat-expansion-panel class="expansion-style">
-            <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title">
-                    Contrato de obra N801801
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <mat-accordion>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
-                            Recursos comprometidos
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-acordion-recursos-compro-pagados-rlc></app-acordion-recursos-compro-pagados-rlc>
-                </mat-expansion-panel>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
-                            Contratistas
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-lista-contratistas-rlc></app-lista-contratistas-rlc>
-                </mat-expansion-panel>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
-                            Valor total ordenes de giro
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-tabla-valtotal-og-rlc></app-tabla-valtotal-og-rlc>
-                </mat-expansion-panel>
-            </mat-accordion>
-        </mat-expansion-panel>
-        <mat-expansion-panel class="expansion-style">
-            <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title">
-                    Contrato de interventoría A513513
-                </mat-panel-title>
-            </mat-expansion-panel-header>
-            <mat-accordion>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
-                            Recursos comprometidos
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-acordion-recursos-compro-pagados-rlc></app-acordion-recursos-compro-pagados-rlc>
-                </mat-expansion-panel>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
-                            Contratistas
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-lista-contratistas-rlc></app-lista-contratistas-rlc>
-                </mat-expansion-panel>
-                <mat-expansion-panel class="expansion-style sub-expansion">
-                    <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
-                            Valor total ordenes de giro
-                        </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <app-tabla-valtotal-og-rlc></app-tabla-valtotal-og-rlc>
-                </mat-expansion-panel>
-            </mat-accordion>
-        </mat-expansion-panel>
-    </mat-accordion>
+<section class="container text-center" *ngIf="data != null">
+  <div class="text-right">
+      <a routerLink="./../" mat-button color="primary" class="btn-regresar">
+          <img src="assets/img/icon/regresar.svg" alt="Regresar">
+      </a>
+  </div>
+  <h1 class="title-menu--h1">Recursos comprometidos y pagados  {{ data.llaveMen }}</h1>
+  <p class="info-sub-title">
+      <span>Número de contrato de obra: <b>{{ data.numeroContratoObra }}</b></span>
+      <span>Número de contrato de interventoría: <b>{{ data.numeroContratoInterventoria }}</b></span>
+  </p>
+  <mat-card class="shipping-card var-main-gris">
+      <mat-card-content align="left">
+          <p><strong>Tipo de intervención: </strong><em>{{ data.tipoIntervencion }}</em></p>
+          <p><strong>Institución Educativa: </strong><em>{{ data.institucionEducativa }}</em></p>
+          <p><strong>Sede: </strong><em>{{ data.sedeEducativa }}</em></p>
+          <p><strong>Departamento: </strong><em>{{ data.departamento }}</em></p>
+          <p><strong>Municipio: </strong><em>{{ data.municipio }}</em></p>
+      </mat-card-content>
+  </mat-card>
+  <mat-accordion>
+      <mat-expansion-panel class="expansion-style">
+          <mat-expansion-panel-header class="expansion-style--header">
+              <mat-panel-title class="expansion-style--title">
+                  Contrato de obra &nbsp;<span *ngIf="contratoObra">{{ contratoObra.numeroContrato }}</span>
+              </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-accordion>
+              <mat-expansion-panel class="expansion-style sub-expansion">
+                  <mat-expansion-panel-header class="expansion-style--header">
+                      <mat-panel-title class="expansion-style--title ">
+                          Recursos comprometidos
+                      </mat-panel-title>
+                  </mat-expansion-panel-header>
+                  <app-acordion-recursos-compro-pagados-rlc *ngIf="contratoObra" [contratacionProyecto]="contratoObra.contratacion.contratacionProyecto" [contratoId]="contratoObra.contratoId"></app-acordion-recursos-compro-pagados-rlc>
+              </mat-expansion-panel>
+              <mat-expansion-panel class="expansion-style sub-expansion">
+                  <mat-expansion-panel-header class="expansion-style--header">
+                      <mat-panel-title class="expansion-style--title ">
+                          Contratistas
+                      </mat-panel-title>
+                  </mat-expansion-panel-header>
+                  <app-lista-contratistas-rlc *ngIf="contratoObra" [contratista]="contratoObra.contratacion.contratista" [valorPagadoContratista]="contratoObra.valorPagadoContratista"></app-lista-contratistas-rlc>
+              </mat-expansion-panel>
+              <mat-expansion-panel class="expansion-style sub-expansion">
+                  <mat-expansion-panel-header class="expansion-style--header">
+                      <mat-panel-title class="expansion-style--title ">
+                          Valor total ordenes de giro
+                      </mat-panel-title>
+                  </mat-expansion-panel-header>
+                  <app-tabla-valtotal-og-rlc *ngIf="tablaOrdenGiroValorTotalObra" [tablaOrdenGiroValorTotal]="tablaOrdenGiroValorTotalObra"></app-tabla-valtotal-og-rlc>
+              </mat-expansion-panel>
+          </mat-accordion>
+      </mat-expansion-panel>
+      <mat-expansion-panel class="expansion-style">
+          <mat-expansion-panel-header class="expansion-style--header">
+              <mat-panel-title class="expansion-style--title">
+                  Contrato de interventoría &nbsp;<span *ngIf="contratoInterventoria">{{ contratoInterventoria.numeroContrato }}</span>
+              </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-accordion>
+              <mat-expansion-panel class="expansion-style sub-expansion">
+                  <mat-expansion-panel-header class="expansion-style--header">
+                      <mat-panel-title class="expansion-style--title ">
+                          Recursos comprometidos
+                      </mat-panel-title>
+                  </mat-expansion-panel-header>
+                  <app-acordion-recursos-compro-pagados-rlc *ngIf="contratoInterventoria" [contratacionProyecto]="contratoInterventoria.contratacion.contratacionProyecto" [contratoId]="contratoInterventoria.contratoId"></app-acordion-recursos-compro-pagados-rlc>
+              </mat-expansion-panel>
+              <mat-expansion-panel class="expansion-style sub-expansion">
+                  <mat-expansion-panel-header class="expansion-style--header">
+                      <mat-panel-title class="expansion-style--title ">
+                          Contratistas
+                      </mat-panel-title>
+                  </mat-expansion-panel-header>
+                  <app-lista-contratistas-rlc *ngIf="contratoInterventoria" [contratista]="contratoInterventoria.contratacion.contratista" [valorPagadoContratista]="contratoInterventoria.valorPagadoContratista"></app-lista-contratistas-rlc>
+              </mat-expansion-panel>
+              <mat-expansion-panel class="expansion-style sub-expansion">
+                  <mat-expansion-panel-header class="expansion-style--header">
+                      <mat-panel-title class="expansion-style--title ">
+                          Valor total ordenes de giro
+                      </mat-panel-title>
+                  </mat-expansion-panel-header>
+                  <app-tabla-valtotal-og-rlc  *ngIf="tablaOrdenGiroValorTotalInterventoria" [tablaOrdenGiroValorTotal]="tablaOrdenGiroValorTotalInterventoria"></app-tabla-valtotal-og-rlc>
+              </mat-expansion-panel>
+          </mat-accordion>
+      </mat-expansion-panel>
+  </mat-accordion>
 </section>
