--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-en-proceso-de-firmas-rlc/tabla-en-proceso-de-firmas-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-en-proceso-de-firmas-rlc/tabla-en-proceso-de-firmas-rlc.component.html
@@ -56,7 +56,7 @@
                   color="accent"
                   class="btn-table"
                   type="button"
-                  (click)="enviarALiquidacion(element.contratoId)"
+                  (click)="enviarALiquidacion(element.contratacionId)"
                 >
                 Liquidar
                 </button>
