--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-liquidacion/form-liquidacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-liquidacion/form-liquidacion.component.html
@@ -268,44 +268,46 @@
             </mat-panel-title>
           </mat-expansion-panel-header>
 
-          <mat-expansion-panel class="expansion-style">
+          <mat-expansion-panel class="expansion-style sub-expansion-black">
             <mat-expansion-panel-header class="expansion-style--header w-45">
               <mat-panel-title class="expansion-style--title">
-                Recursos comprometidos
+                Recursos comprometidos y pagados
               </mat-panel-title>
             </mat-expansion-panel-header>
-
-            <div class="text-center">
-              <p><b>DDP_0029</b></p>
-            </div>
-            <app-tabla-recursos-compartidos></app-tabla-recursos-compartidos>
-            <app-form-recursos-compartidos></app-form-recursos-compartidos>
-
+            <app-recursos-compro-pagados [proyectoId]="data.proyectoId"></app-recursos-compro-pagados>
           </mat-expansion-panel>
 
-          <mat-expansion-panel class="expansion-style">
-            <mat-expansion-panel-header class="expansion-style--header w-45">
-              <mat-panel-title class="expansion-style--title">
-                Recursos pagados
-              </mat-panel-title>
-            </mat-expansion-panel-header>
-
-            <app-form-recursos-pagados></app-form-recursos-pagados>
-
-          </mat-expansion-panel>
-
-          <mat-expansion-panel class="expansion-style">
+          <mat-expansion-panel class="expansion-style sub-expansion-black">
             <mat-expansion-panel-header class="expansion-style--header w-45">
               <mat-panel-title class="expansion-style--title">
                 Ejecución financiera por componentes
               </mat-panel-title>
             </mat-expansion-panel-header>
-            {{ data.ejecucionPresupuestal | json}}
-            <!--<app-form-ejecucion-financiera [ejecucionPresupuestal] ="data.ejecucionPresupuestal"></app-form-ejecucion-financiera>-->
+
+            <mat-card class="shipping-card mainGris">
+              <mat-card-header class="header-card header-card--margin">
+                  <mat-card-title class="header-card--text textoGris">
+                      Ejecución presupuestal
+                  </mat-card-title>
+              </mat-card-header>
+              <mat-card-content>
+                  <app-tabla-ejpresupuestal *ngIf="data.ejecucionPresupuestal" [data]="data.ejecucionPresupuestal?.dataTableEjpresupuestal"></app-tabla-ejpresupuestal>
+              </mat-card-content>
+            </mat-card>
+            <mat-card class="shipping-card mainGris" style="margin-top: 3em;">
+              <mat-card-header class="header-card header-card--margin">
+                  <mat-card-title class="header-card--text textoGris">
+                      Ejecución financiera
+                  </mat-card-title>
+              </mat-card-header>
+              <mat-card-content>
+                  <app-tabla-ejfinanciera *ngIf="data.ejecucionPresupuestal" [data]="data.ejecucionPresupuestal?.dataTableEjfinanciera"></app-tabla-ejfinanciera>
+              </mat-card-content>
+            </mat-card>
 
           </mat-expansion-panel>
 
-          <mat-expansion-panel class="expansion-style">
+          <mat-expansion-panel class="expansion-style sub-expansion-black" *ngIf="data.cumpleCondicionesTai !== true">
             <mat-expansion-panel-header class="expansion-style--header w-45">
               <mat-panel-title class="expansion-style--title">
                 Traslados de recursos
@@ -319,6 +321,16 @@
                 </mat-card-content>
               </mat-card>
             </div>
+
+          </mat-expansion-panel>
+
+          <mat-expansion-panel class="expansion-style sub-expansion-black" *ngIf="data.cumpleCondicionesTai === true">
+            <mat-expansion-panel-header class="expansion-style--header w-45">
+              <mat-panel-title class="expansion-style--title">
+                Ver liberación de saldos
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <app-ver-liberacion-saldos [proyectoId]="data.proyectoId"></app-ver-liberacion-saldos>
 
           </mat-expansion-panel>
 
