--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-liquidacion/form-liquidacion.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-liquidacion/form-liquidacion.component.scss
@@ -49,3 +49,11 @@
 .back-color {
   background-color: #000000b8;
 }
+
+.mainGris{
+  border: 1px solid var(--fontColor) !important;
+}
+
+.textoGris{
+  color: var(--fontColor) !important;
+}
