--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/acordion-recursos-compro-pagados-rlc/acordion-recursos-compro-pagados-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/acordion-recursos-compro-pagados-rlc/acordion-recursos-compro-pagados-rlc.component.html
@@ -1,27 +1,27 @@
 <div class="table-responsive text-center">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-        <ng-container matColumnDef="aportante">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
-            <td mat-cell *matCellDef="let element"style="padding: 0 0em !important;">
-                <div class="supportElement" *ngFor="let el of element.aportante ; let i = index">
-                    {{el.nombre}}
-                </div>
-            </td>
-        </ng-container>
-        <ng-container matColumnDef="valorAportante">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor aportante </th>
-            <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
-                <div class="supportElement" *ngFor="let el of element.valorAportante ; let i = index">
-                    {{el.valor}}
-                </div>
-            </td>
-        </ng-container>
-        <ng-container matColumnDef="valorTotalAportantes">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor total aportantes </th>
-            <td mat-cell *matCellDef="let element"> <b>{{element.valorTotalAportantes}}</b></td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+      <ng-container matColumnDef="aportante">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
+          <td mat-cell *matCellDef="let element"style="padding: 0 0em !important;">
+              <div class="supportElement" *ngFor="let el of element.aportante ; let i = index">
+                  {{el.nombre}}
+              </div>
+          </td>
+      </ng-container>
+      <ng-container matColumnDef="valorAportante">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor aportante </th>
+          <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
+              <div class="supportElement" *ngFor="let el of element.valorAportante ; let i = index">
+                ${{ el.valor | currency:' ':'symbol-narrow':'.0-0' }}
+              </div>
+          </td>
+      </ng-container>
+      <ng-container matColumnDef="valorTotalAportantes">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor total aportantes </th>
+          <td mat-cell *matCellDef="let element"> <b>${{ element.valorTotalAportantes | currency:' ':'symbol-narrow':'.0-0' }} </b></td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
-<app-tabla-fuentes-usos-rlc></app-tabla-fuentes-usos-rlc>
+<app-tabla-fuentes-usos-rlc *ngIf="contratoId" [contratoId]="contratoId"></app-tabla-fuentes-usos-rlc>
