--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/detalle-informe-final-rlc/detalle-informe-final-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/detalle-informe-final-rlc/detalle-informe-final-rlc.component.html
@@ -1,89 +1,121 @@
-<section class="container text-center" *ngIf="data !== undefined">
+<section class="container" *ngIf="data">
+  <div class="text-center">
     <div class="text-right">
-        <a (click)="getRutaAnterior()" mat-button color="primary"
-            class="btn-regresar">
-            <img src="assets/img/icon/regresar.svg" alt="Regresar">
-        </a>
+      <a routerLink="../.." mat-button color="primary" class="btn-regresar">
+        <img src="assets/img/icon/regresar.svg" alt="Regresar" />
+      </a>
     </div>
-    <h1 class="title-menu--h1">Ver detalle informe final LL457326</h1>
-    <p class="info-sub-title">
-        <span>Fecha de envío del informe final: <b>29/11/2020</b></span>
-        <span>Fecha de aprobación del informe final: <b>29/11/2020</b></span>
+    <h1 class="title-menu--h1">
+      <ng-container>
+          Ver detalle Informe final {{ data.informeFinal.proyecto.llaveMen }}
+      </ng-container>
+    </h1>
+    <p class="colorMainColor mt-1em">
+      <span class="mx-1em">
+        Fecha de envío del informe final <b> {{ data.informeFinal.fechaEnvioEtc  | date:'dd/MM/yyyy' }} </b>
+      </span>
+      <span class="mx-1em">
+        Fecha de aprobación del informe final <b> {{ data.informeFinal.fechaAprobacionFinal  | date:'dd/MM/yyyy' }} </b>
+      </span>
     </p>
-    <mat-card class="shipping-card border" align="left">
-        <mat-card-header class="header-card header-card--margin">
-          <mat-card-title class="header-card--text card-title-detalle">
-            Datos del proyecto
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p><strong> Tipo de intervención: </strong> {{ data.informeFinal.proyecto.tipoIntervencionString }} </p>
-          <p><strong> Institución Educativa: </strong> {{ data.informeFinal.proyecto.institucionEducativa.nombre }} </p>
-          <p><strong> Sede: </strong> {{ data.informeFinal.proyecto.sede.nombre }} </p>
-          <p><strong> Departamento: </strong> {{ data.informeFinal.proyecto.departamentoObj.descripcion }} </p>
-          <p><strong> Municipio: </strong> {{ data.informeFinal.proyecto.municipioObj.descripcion }} </p>
-          <p><strong> Número de contrato de obra: </strong> {{ data.numeroContratoObra }} </p>
-          <p><strong> Nombre del contratista de obra: </strong> {{ data.nombreContratistaObra }} </p>
-          <p><strong> Número de contrato de interventoría: </strong> {{ data.numeroContratoInterventoria }} </p>
-          <p><strong> Nombre de contratista de interventoría: </strong> {{ data.nombreContratistaInterventoria }} </p>
-        </mat-card-content>
-      </mat-card>
-    <div class="mt-2em">
-        <mat-card class="shipping-card border" align="left">
-            <mat-card-header class="header-card header-card--margin">
-              <mat-card-title class="header-card--text card-title-detalle">
-                Recibo a satisfacción
-              </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-              <p><strong> URL Acta de recibo a satisfaccion - Obra: </strong> {{ data.informeFinal.urlActa }} </p>
-              <p><strong> Fecha de suscripción: </strong> {{ data.informeFinal.fechaSuscripcion | date:'dd/MM/yyyy' }} </p>
-            </mat-card-content>
-          </mat-card>
-    </div>
-    <div class="mt-1em">
-        <mat-accordion>
-            <mat-expansion-panel class="expansion-style">
-                <mat-expansion-panel-header class="expansion-style--header">
-                    <mat-panel-title class="expansion-style--title">
-                        Informe final y anexos
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
+  </div>
 
-                <app-tabla-detalle-informe-final [informeFinalId]="data.informeFinal.informeFinalId"></app-tabla-detalle-informe-final>
-            </mat-expansion-panel>
-        </mat-accordion>
-    </div>
-    <!--Se pondrá los if's-->
-    <!-- Se comentan las observaciones, solicitado por Natalia (LCT) -->
-    <!--<div>
-        <div class="mt-2em">
-            <mat-card class="shipping-card var-main-gris">
-                <mat-card-header class="header-card  header-card--margin">
-                    <mat-card-title class="header-card--text">
-                        Observaciones del supervisor
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content align="left">
-                    <p><strong>16/11/2020</strong></p>
-                    <p><strong>¿Desde la supervisión tiene observaciones frente al informe final que deban ser tenidas
-                            en cuenta en la liquidación?: </strong><em>No</em></p>
-                </mat-card-content>
-            </mat-card>
-        </div>
-        <div class="mt-2em">
-            <mat-card class="shipping-card var-main-gris">
-                <mat-card-header class="header-card  header-card--margin">
-                    <mat-card-title class="header-card--text">
-                        Observaciones control y seguimiento
-                    </mat-card-title>
-                </mat-card-header>
-                <mat-card-content align="left">
-                    <p><strong>17/11/2020</strong></p>
-                    <p><strong>¿Desde control y seguimiento tiene observaciones frente al informe final que deban ser
-                            tenidas en cuenta en la liquidación?: </strong><em>No</em></p>
-                </mat-card-content>
-            </mat-card>
-        </div>
-    </div>-->
+  <mat-card class="shipping-card var-main-gris">
+    <mat-card-header class="header-card header-card--margin">
+      <mat-card-title class="header-card--text">
+        Datos del proyecto
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        <strong>
+          Tipo de intervención:
+        </strong>
+        {{ data.informeFinal.proyecto.tipoIntervencionString }}
+      </p>
+      <p>
+        <strong>
+          Institución Educativa:
+        </strong>
+        {{ data.informeFinal.proyecto.institucionEducativa.nombre }}
+      </p>
+      <p>
+        <strong>
+          Sede:
+        </strong>
+        {{ data.informeFinal.proyecto.sede.nombre }}
+      </p>
+      <p>
+        <strong>
+          Departamento:
+        </strong>
+        {{ data.informeFinal.proyecto.departamentoObj.descripcion }}
+      </p>
+      <p>
+        <strong>
+          Municipio:
+        </strong>
+        {{ data.informeFinal.proyecto.municipioObj.descripcion }}
+      </p>
+      <p>
+        <strong>
+          Número de contrato de obra:
+        </strong>
+        {{ data.numeroContratoObra }}
+      </p>
+      <p>
+        <strong>
+          Nombre del contratista de obra:
+        </strong>
+        {{ data.nombreContratistaObra }}
+      </p>
+      <p>
+        <strong>
+        Número de contrato de interventoría:
+        </strong>
+        {{ data.numeroContratoInterventoria }}
+      </p>
+      <p>
+        <strong>
+        Nombre de contratista de interventoría:
+        </strong>
+        {{ data.nombreContratistaInterventoria }}
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="shipping-card var-main-gris">
+    <mat-card-header class="header-card header-card--margin">
+      <mat-card-title class="header-card--text">
+        Recibo a satisfacción
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        <strong>
+          URL Acta de recibo a satisfaccion - Obra:
+        </strong>
+        {{ data.informeFinal.urlActa }}
+      </p>
+      <p>
+        <strong>
+          Fecha de suscripción:
+        </strong>
+        {{ data.informeFinal.fechaSuscripcion | date:'dd/MM/yyyy' }}
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-accordion>
+    <mat-expansion-panel class="expansion-style">
+        <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Informe final y anexos
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+
+        <app-tabla-informe-anexos *ngIf="data != null && data != 'undefined'" [informeFinalId] = "data.informeFinal.informeFinalId"></app-tabla-informe-anexos>
+
+    </mat-expansion-panel>
+  </mat-accordion>
 </section>
