--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/gestionar-solicitud-rlc/gestionar-solicitud-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/gestionar-solicitud-rlc/gestionar-solicitud-rlc.component.html
@@ -44,8 +44,8 @@
                     Balance Financiero
                 </mat-panel-title>
             </mat-expansion-panel-header>
+            <app-tabla-balance-financiero-rlc *ngIf="contratacionId" [contratacionId]="contratacionId"></app-tabla-balance-financiero-rlc>
 
-            <app-tabla-balance-financiero-rlc></app-tabla-balance-financiero-rlc>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
