--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/lista-contratistas-rlc/lista-contratistas-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/lista-contratistas-rlc/lista-contratistas-rlc.component.html
@@ -1,26 +1,13 @@
-<mat-card class="shipping-card mainGris">
-    <mat-card-header class="header-card header-card--margin">
-        <mat-card-title class="header-card--text textoGris">
-            Construir Futuro
-        </mat-card-title>
-    </mat-card-header>
-    <mat-card-content style="text-align: left;">
-        <p><strong>Nit: </strong><em>900.879-765-2</em></p>
-        <p><strong>Representante legal: </strong><em>Juan Pablo Tello Posada</em></p>
-        <p><strong>Número de identificación del representante: </strong><em>103456783</em></p>
-        <p><strong>Valor pagado: </strong><em>$67.000.000</em></p>
-    </mat-card-content>
-</mat-card>
-<mat-card class="shipping-card mainGris" style="margin-top: 3em;">
-    <mat-card-header class="header-card header-card--margin">
-        <mat-card-title class="header-card--text textoGris">
-            Contratista 2
-        </mat-card-title>
-    </mat-card-header>
-    <mat-card-content style="text-align: left;">
-        <p><strong>Nit: </strong><em>900.555-555-0</em></p>
-        <p><strong>Representante legal: </strong><em>Alberto Sandoval Camcho</em></p>
-        <p><strong>Número de identificación del representante: </strong><em>1143765</em></p>
-        <p><strong>Valor pagado: </strong><em>$30.000.000</em></p>
-    </mat-card-content>
+<mat-card class="shipping-card mainGris" *ngIf="contratista">
+  <mat-card-header class="header-card header-card--margin">
+      <mat-card-title class="header-card--text textoGris">
+          {{ contratista.nombre }}
+      </mat-card-title>
+  </mat-card-header>
+  <mat-card-content style="text-align: left;">
+      <p><strong>Nit: </strong><em>{{ contratista.numeroIdentificacion}}</em></p>
+      <p><strong>Representante legal: </strong><em>{{ contratista.representanteLegal}}</em></p>
+      <p><strong>Número de identificación del representante: </strong><em>{{ contratista.representanteLegalNumeroIdentificacion ? contratista.representanteLegalNumeroIdentificacion : 'No se registra' }}</em></p>
+      <p><strong>Valor facturado: </strong><em> {{ valorPagadoContratista | currency:'':'symbol-narrow':'.0-0' }} </em></p>
+  </mat-card-content>
 </mat-card>
