--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-balance-financiero-rlc/tabla-balance-financiero-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/tabla-balance-financiero-rlc/tabla-balance-financiero-rlc.component.html
@@ -1,44 +1,49 @@
 <div class="table-responsive">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-        <ng-container matColumnDef="fechaTerminacionProyecto">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de terminación del proyecto </th>
-            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaTerminacionProyecto | date:
-                    'dd/MM/yyyy' }}</b> </td>
-        </ng-container>
-        <ng-container matColumnDef="llaveMEN">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Llave MEN </th>
-            <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.llaveMEN }}</em> </td>
-        </ng-container>
-        <ng-container matColumnDef="tipoIntervencion">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de intervención </th>
-            <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.tipoIntervencion }}</em> </td>
-        </ng-container>
-        <ng-container matColumnDef="institucionEducativa">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Institución Educativa </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.institucionEducativa }} </td>
-        </ng-container>
-        <ng-container matColumnDef="sede">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.sede }} </td>
-        </ng-container>
-        <ng-container matColumnDef="numeroTraslados">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de traslados </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroTraslados }} </td>
-        </ng-container>
-        <ng-container matColumnDef="estadoBalance">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del balance </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoBalance }} </td>
-        </ng-container>
-        <ng-container matColumnDef="gestion">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
-            <td mat-cell *matCellDef="let element" align="center">
-                <button mat-raised-button color="accent" class="btn-table"
-                    (click)="verDetalle(element.id)">
-                    Ver detalle
-                </button>
-            </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+      <ng-container matColumnDef="fechaterminacionProyecto">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de terminación del proyecto </th>
+          <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaterminacionProyecto }}</b> </td>
+      </ng-container>
+      <ng-container matColumnDef="llaveMEN">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Llave MEN </th>
+          <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.llaveMen }}</em> </td>
+      </ng-container>
+      <ng-container matColumnDef="tipoIntervencion">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de intervención </th>
+          <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.tipoIntervencion }}</em> </td>
+      </ng-container>
+      <ng-container matColumnDef="institucionEducativa">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Institución Educativa </th>
+          <td mat-cell *matCellDef="let element" align="center"> {{ element.institucionEducativa }} </td>
+      </ng-container>
+      <ng-container matColumnDef="sede">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede </th>
+          <td mat-cell *matCellDef="let element" align="center"> {{ element.sede }} </td>
+      </ng-container>
+      <ng-container matColumnDef="numeroTraslados">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de traslados </th>
+          <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroTraslados }} </td>
+      </ng-container>
+      <ng-container matColumnDef="estadoValidacion">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del balance </th>
+          <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoValidacion }} </td>
+      </ng-container>
+      <ng-container matColumnDef="contratacionId">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Gestión
+          </th>
+          <td mat-cell *matCellDef="let element">
+          <a  mat-button
+              mat-raised-button
+              color="accent"
+              class="btn-table"
+              [routerLink]="['verDetalleBalance',element.proyectoId]"
+          >
+          Ver detalle
+          </a>
+          </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
