--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/traslado-recursos-rlc/traslado-recursos-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/traslado-recursos-rlc/traslado-recursos-rlc.component.html
@@ -1,66 +1,62 @@
-<section class="container text-center">
-    <div class="text-right">
-        <a routerLink="/registrarLiquidacionContrato/detalleBalanceFinanciero/1" mat-button color="primary" class="btn-regresar">
-            <img src="assets/img/icon/regresar.svg" alt="Regresar">
-        </a>
-    </div>
-    <h1 class="title-menu--h1">Traslados de recursos LL457326</h1>
-    <p class="info-sub-title">
-        <span>Número de contrato de obra: <b>N801801</b></span>
-        <span>Número de contrato de interventoría: <b>A513513</b></span>
-    </p>
-    <mat-card class="shipping-card var-main-gris">
-        <mat-card-content align="left">
-            <p><strong>Tipo de intervención: </strong><em>Remodelación</em></p>
-            <p><strong>Institución Educativa: </strong><em>I.E Nuestra Señora Del Carmen</em></p>
-            <p><strong>Sede: </strong><em>Única Sede</em></p>
-            <p><strong>Departamento: </strong><em>Boyacá</em></p>
-            <p><strong>Municipio: </strong><em>Susacón</em></p>
-        </mat-card-content>
-    </mat-card>
-    <mat-card class="shipping-card mainGris">
-        <mat-card-content align="left">
-            <p><b>11/08/2021</b></p>
-            <p><strong>¿Se requiere registrar un traslado de recursos entre los aportantes y fuentes que financian este proyecto, antes de aprobar el
-                balance financiero?: </strong><em>No</em></p>
-        </mat-card-content>
-    </mat-card>
-    <div class="tabla-expansion-panel">
-        <table mat-table [dataSource]="dataSource" matSort class="tabla mat-elevation-z8 text-center">
-            <ng-container matColumnDef="fechaTraslado">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de traslado </th>
-                <td mat-cell *matCellDef="let element"> <b>{{element.fechaTraslado}}</b> </td>
-            </ng-container>
-            <ng-container matColumnDef="numTraslado">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de traslado </th>
-                <td mat-cell *matCellDef="let element"><em>{{element.numTraslado}}</em> </td>
-            </ng-container>
-            <ng-container matColumnDef="numContrato">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de contrato</th>
-                <td mat-cell *matCellDef="let element"><em>{{element.numContrato}}</em> </td>
-            </ng-container>
-            <ng-container matColumnDef="numOrdenGiro">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Número de orden de giro</th>
-                <td mat-cell *matCellDef="let element"> <em>{{element.numOrdenGiro}}</em> </td>
-            </ng-container>
-            <ng-container matColumnDef="valorTraslado">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor del traslado</th>
-                <td mat-cell *matCellDef="let element"> <em>{{element.valorTraslado}}</em> </td>
-            </ng-container>
-            <ng-container matColumnDef="estadoTraslado">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del traslado</th>
-                <td mat-cell *matCellDef="let element"> <em>{{element.estadoTraslado}}</em> </td>
-            </ng-container>
-            <ng-container matColumnDef="gestion">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión</th>
-                <td mat-cell *matCellDef="let element">
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalleTraslado(element.id)">
-                        Ver Detalle</button>
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-    </div>
-</section>
+<section class="container text-center" *ngIf="proyecto !== undefined">
+  <div class="text-right">
+      <a (click)="getRutaAnterior()" mat-button color="primary"
+          class="btn-regresar">
+          <img src="assets/img/icon/regresar.svg" alt="Regresar">
+      </a>
+  </div>
+  <div class="text-center">
+      <h1 class="title-menu--h1">Ver detalle {{ numeroTraslado }}</h1>
+      <p class="colorMainColor mt-1em">
+        <span class="mx-1em"> Llave MEN: <b> {{ proyecto.llaveMen }} </b> </span>
+        <span class="mx-1em"> Número de contrato de obra: <b> {{ proyecto.numeroContratoObra }} </b> </span>
+        <span class="mx-1em"> Número de contrato de interventoría: <b> {{ proyecto.numeroContratoInterventoria }} </b> </span>
+      </p>
+  </div>
 
+  <mat-card class="shipping-card var-main-gris">
+      <mat-card-content align="left">
+          <p><strong>Tipo de intervención: </strong><em> {{ proyecto.tipoIntervencion }} </em></p>
+          <p><strong>Institución Educativa: </strong><em> {{ proyecto.institucionEducativa }} </em></p>
+          <p><strong>Sede educativa: </strong><em> {{ proyecto.sedeEducativa }} </em></p>
+          <p><strong>Departamento: </strong><em> {{ proyecto.departamento }} </em></p>
+          <p><strong>Municipio: </strong><em> {{ proyecto.municipio }} </em></p>
+          <p><strong>Número DDP: </strong><em>DDP_0001 *</em></p>
+          <p><strong>Valor DDP: </strong><em>$100.000.000 *</em></p>
+          <p>
+              <strong> Justificación del traslado entre aportantes y fuentes del proyecto: </strong>
+              <span class="d-block">Se requiere el traslados ya que el aportante Gobernación de Boyacá No cuenta con los recursos necesarios y seran solventados por la Alcaldía de Susacón</span>
+          </p>
+            <p><strong> URL con soporte: </strong> http//:onedrive/traslado0001</p>
+
+          <h2 class="card-subTitle">DRP</h2>
+          <div class="table-responsive">
+              <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+                  <ng-container matColumnDef="drp">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header>DRP </th>
+                      <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.drp }}</b> </td>
+                  </ng-container>
+                  <ng-container matColumnDef="numDRP">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
+                      <td mat-cell *matCellDef="let element" align="center"> {{ element.numDRP }} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="valor">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
+                      <td mat-cell *matCellDef="let element" align="center"> {{ element.valor }} </td>
+                  </ng-container>
+                  <ng-container matColumnDef="saldo">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
+                      <td mat-cell *matCellDef="let element" align="center"> {{ element.saldo }} </td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
+          </div>
+      </mat-card-content>
+  </mat-card>
+  <app-control-solicitudes-traslado-gbftrec   [proyectoId]="proyectoId"
+                                              [esRegistroNuevo]="esRegistroNuevo"
+                                              [proyecto]="proyecto"
+                                              [esVerDetalle]="esVerDetalle">
+  </app-control-solicitudes-traslado-gbftrec>
+</section>
